--- a/frontend/src/components/common/Catalog/components/ModalCatalog/ModalCatalog.module.scss
+++ b/frontend/src/components/common/Catalog/components/ModalCatalog/ModalCatalog.module.scss
@@ -28,7 +28,6 @@
   padding: 0 27px;
   justify-content: space-between;
   align-items: center;
-  gap: 84px;
   background: $white-color;
   height: 56px;
   width: 100%;
